deployments/kubernetes/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-to-istio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /users(/|$)(.*) # Example path for user service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway # Name of your Istio Ingress Gateway service
            port:
              number: 80 # Port of your Istio Ingress Gateway
      - path: /admin(/|$)(.*) # Path for admin service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /ai_model(/|$)(.*) # Path for ai_model service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /analytics(/|$)(.*) # Path for analytics service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /asset(/|$)(.*) # Path for asset service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /auth(/|$)(.*) # Path for auth service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /bi(/|$)(.*) # Path for bi service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /cart(/|$)(.*) # Path for cart service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /cdc(/|$)(.*) # Path for cdc service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /config(/|$)(.*) # Path for config service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /content_moderation(/|$)(.*) # Path for content_moderation service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /customer_service(/|$)(.*) # Path for customer_service service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /data_ingestion(/|$)(.*) # Path for data_ingestion service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /data_lake_ingestion(/|$)(.*) # Path for data_lake_ingestion service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /data_processing(/|$)(.*) # Path for data_processing service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /data_warehouse_query(/|$)(.*) # Path for data_warehouse_query service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /logistics(/|$)(.*) # Path for logistics service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /marketing(/|$)(.*) # Path for marketing service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /notification(/|$)(.*) # Path for notification service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /order(/|$)(.*) # Path for order service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /payment(/|$)(.*) # Path for payment service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /pricing(/|$)(.*) # Path for pricing service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /product(/|$)(.*) # Path for product service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
      - path: /realtime_analytics(/|$)(.*) # Path for realtime_analytics service
        pathType: Prefix
        backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
